--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#f2f2f2"
     >
 
     <ImageButton
@@ -27,12 +28,21 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/enter_button"
+        android:id="@+id/sign_in"
+        android:layout_width="289dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:text="로그인하기" />
+
+    <Button
+        android:id="@+id/sign_up"
         android:layout_width="289dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
-        android:text="오늘의 기록 시작하기" />
+        android:text="회원가입 하기" />
 
 </RelativeLayout>
