이메일 확인과정 추가, FCM 토큰 구현 : 이창재
- 회원가입 후 이메일 확인을 거쳐야 서비스 사용 가능
- FCM 토큰 발급 구현

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -57,6 +57,11 @@
             android:text="리스트로"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/push_dev"
+            android:text="푸시알림 테스트"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/buttonLogout"
