--- a/app/src/main/res/layout/activity_resetpw.xml
+++ b/app/src/main/res/layout/activity_resetpw.xml
@@ -6,13 +6,14 @@
     android:background="#f2f2f2">
 
     <TextView
-        android:layout_gravity="center_horizontal"
+        android:id="@+id/title_findpw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:textSize="23dp"
+        android:text="암호찾기"
         android:textColor="@color/colorAccent"
-        android:text="암호찾기" />
+        android:textSize="23dp" />
 
     <TextView
         android:text="등록한 Email을 입력해 주세요/"
