--- a/app/src/main/res/layout/activty_pwcg.xml
+++ b/app/src/main/res/layout/activty_pwcg.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:background="#f2f2f2">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="114dp"
+        app:srcCompat="@drawable/main_image" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -29,7 +36,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/saveBtn"
+        android:id="@+id/save_btn"
         android:text="Save Password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
