--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <EditText
+            <com.teamTK.tracker.common.ClearEditText
                 android:id="@+id/user_id"
                 android:hint="e-Mail"
                 android:layout_width="match_parent"
@@ -33,7 +33,7 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <EditText
+            <com.teamTK.tracker.common.ClearEditText
                 android:id="@+id/user_name"
                 android:hint="Name"
                 android:inputType="text"
@@ -41,13 +41,13 @@
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
         <Button
-            android:id="@+id/save_btn"
+            android:id="@+id/saveBtn"
             android:text="정보변경저장"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/changepw_btn"
+            android:id="@+id/changePWBtn"
             android:text="패스워드변경"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/button_logout"
+            android:id="@+id/buttonLogout"
             android:text="로그아웃"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
@@ -72,7 +72,7 @@
 
         <TextView
             android:text="회원탈퇴 합니다."
-            android:id="@+id/textview_delete"
+            android:id="@+id/textviewDelete"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAccent"
             android:layout_margin="16dp"
