--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,15 @@
     android:background="#f2f2f2"
     >
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/main_background"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
+
     <ImageButton
-        android:id="@+id/logo"
+        android:id="@+id/imageView1"
         android:layout_width="123dp"
         android:layout_height="123dp"
         android:layout_above="@+id/sign_in"
@@ -17,14 +24,14 @@
         app:srcCompat="@drawable/main_image" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/logo"
+        android:layout_above="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:text="TRACKER"
-        android:textColor="@android:color/black"
+        android:textColor="@color/browser_actions_text_color"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -35,7 +42,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="200dp"
-        android:text="이메일로 로그인" />
+        android:text="이메일로 로그인"
+        android:textColor="@color/cardview_dark_background"
+        app:backgroundTint="@color/com_facebook_button_border_color_focused" />
 
     <Button
         android:id="@+id/btn_google_custom"
@@ -44,6 +53,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp"
+        app:backgroundTint="@color/cardview_light_background"
         android:text="구글계정으로 로그인" />
 
     <Button
@@ -53,7 +63,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
-        android:text="페이스북으로 로그인" />
+        app:backgroundTint="@color/com_facebook_button_background_color"
+        android:text="페이스북으로 로그인"
+        android:textColor="@android:color/white" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/btn_facebook_login"
@@ -64,13 +76,15 @@
         android:layout_marginBottom="100dp"
         android:visibility="gone"/>
 
-    <Button
+    <TextView
         android:id="@+id/sign_up"
         android:layout_width="289dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
-        android:text="회원가입 하기" />
+        android:textColor="@color/browser_actions_text_color"
+        android:text="계정이 없으신가요? 회원가입 하기"
+        android:textAlignment="center" />
 
 </RelativeLayout>
