--- a/app/src/main/res/layout/activity_resetpw.xml
+++ b/app/src/main/res/layout/activity_resetpw.xml
@@ -6,14 +6,13 @@
     android:background="#f2f2f2">
 
     <TextView
-        android:id="@+id/title_findpw"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:text="암호찾기"
+        android:textSize="23dp"
         android:textColor="@color/colorAccent"
-        android:textSize="23dp" />
+        android:text="암호찾기" />
 
     <TextView
         android:text="등록한 Email을 입력해 주세요/"
@@ -21,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
+    <com.teamTK.tracker.common.ClearEditText
         android:id="@+id/editTextUserEmail"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
