--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -14,7 +14,7 @@
         android:textColor="@color/colorAccent"
         android:text="로그인" />
 
-    <EditText
+    <com.teamTK.tracker.common.ClearEditText
         android:id="@+id/editTextEmail"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         android:hint="Enter email"
         android:inputType="textEmailAddress" />
 
-    <EditText
+    <com.teamTK.tracker.common.ClearEditText
         android:id="@+id/editTextPassword"
         android:layout_width="250dp"
         android:layout_gravity="center_horizontal"
