--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,11 +16,11 @@
 
     <TextView
         android:layout_gravity="center_horizontal"
-        android:text="이 앱은 회원가입을 해야 정상적으로 사용할 수 있습니다.\n Email로 등록해 주세요."
+        android:text="Email을 이용한 회원가입입니다."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
+    <com.teamTK.tracker.common.ClearEditText
         android:id="@+id/editTextEmail"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
         android:hint="Enter email"
         android:inputType="textEmailAddress"/>
 
-    <EditText
+    <com.teamTK.tracker.common.ClearEditText
         android:id="@+id/editTextPassword"
         android:layout_width="250dp"
         android:layout_gravity="center_horizontal"
@@ -37,6 +37,13 @@
         android:layout_margin="10dp"
         android:hint="Enter password"
         android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/textviewMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/colorAccent" />
 
     <Button
         android:id="@+id/buttonSignup"
@@ -52,13 +59,6 @@
         android:textAlignment="center"
         android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:id="@+id/textviewMessage"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
