--- a/app/src/main/res/layout/activty_pwcg.xml
+++ b/app/src/main/res/layout/activty_pwcg.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:background="#f2f2f2">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="114dp"
-        app:srcCompat="@drawable/main_image" />
-
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <EditText
+        <com.teamTK.tracker.common.ClearEditText
             android:id="@+id/user_pw1"
             android:hint="패스워드"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <EditText
+        <com.teamTK.tracker.common.ClearEditText
             android:id="@+id/user_pw2"
             android:hint="패스워드확인"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/save_btn"
+        android:id="@+id/saveBtn"
         android:text="Save Password"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
