푸시알림 서비스 완성, 일부 디자인 개선 : 이창재
- 매 PM 11시마다 푸시알림 전송기능 구현
- 일부 디자인 개선

--- a/app/src/main/res/layout/activity_resetpw.xml
+++ b/app/src/main/res/layout/activity_resetpw.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        android:hint="Enter email"
+        android:hint="E-mail을 입력해 주세요"
         android:inputType="textEmailAddress" />
 
     <Button
