--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,16 +16,16 @@
         <ImageView
             android:id="@+id/user_photo"
             android:layout_margin="5dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@android:drawable/ic_menu_gallery"/>
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/default_profile"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <com.teamTK.tracker.common.ClearEditText
                 android:id="@+id/user_id"
-                android:hint="e-Mail"
+                android:hint="E-mail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content">
             <com.teamTK.tracker.common.ClearEditText
                 android:id="@+id/user_name"
-                android:hint="Name"
+                android:hint="닉네임"
                 android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -61,7 +61,8 @@
             android:id="@+id/push_dev"
             android:text="푸시알림 테스트"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/buttonLogout"
@@ -71,7 +72,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="회원탈퇴 합니다."
+            android:text="회원탈퇴"
             android:id="@+id/textviewDelete"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAccent"
