--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        android:hint="Enter email"
+        android:hint="E-mail을 입력해 주세요"
         android:inputType="textEmailAddress" />
 
     <com.teamTK.tracker.common.ClearEditText
@@ -29,7 +29,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Enter password"
+        android:hint="패스워드를 입력해 주세요"
         android:inputType="textPassword" />
 
     <Button
